tests/miniJava/neg/004920_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , System.out.println int [] java ) { return 0 ; } }
